--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -84,13 +84,13 @@ jobs:
         run: cargo fmt --all -- --check
 
       - name: Run clippy
-        run: cargo clippy --all-targets --all-features --workspace -- -D warnings
+        run: cargo clippy --all-targets --workspace -- -D warnings
 
       - name: Run tests
-        run: cargo test --all-features --workspace
+        run: cargo test --workspace
 
       - name: Build documentation
-        run: cargo doc --all-features --no-deps --workspace
+        run: cargo doc --no-deps --workspace
 
       - name: Publish to crates.io
         env:
@@ -138,10 +138,10 @@ jobs:
         run: cargo fmt --all -- --check
 
       - name: Run clippy
-        run: cargo clippy --all-targets --all-features --workspace -- -D warnings
+        run: cargo clippy --all-targets --workspace -- -D warnings
 
       - name: Run tests
-        run: cargo test --all-features --workspace
+        run: cargo test --workspace
 
       - name: Publish CLI to crates.io
         env:
