fix(deps): update nami to 0.7.1 and add nami-core dependency; adjust serde features fix(url): modify default feature configuration for waterui-url fix(url): import Box from alloc in waterui-url library

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,7 +56,8 @@ clippy.multiple_crate_versions =  { level = "allow", priority = 1 }
 
 [workspace.dependencies]
 executor-core = { version = "0.6.0", features = ["std"]}
-nami = "0.6.2"
+nami = "0.7.1"
+nami-core = "0.1.0"
 log = "0.4.28"
 waterui-core = { version = "0.1.0", path = "core" }
 waterui-str = { version = "0.2.0", path = "utils/str" }
