--- a/utils/str/Cargo.toml
+++ b/utils/str/Cargo.toml
@@ -11,12 +11,11 @@ keywords = ["string", "text", "utilities", "waterui"]
 categories = ["text-processing", "data-structures"]
 
 [dependencies]
-serde = { workspace = true, features = ["derive", "alloc"], optional = true }
-nami = { workspace = true }
+serde = { workspace = true, optional = true }
+nami-core.workspace = true
 
 [features]
 default = []
-std = []
 serde = ["dep:serde"]
 
 [lints]
