--- a/components/controls/Cargo.toml
+++ b/components/controls/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "waterui-form"
+name = "waterui-controls"
 version = "0.1.0"
 edition.workspace = true
 authors.workspace = true
@@ -16,19 +16,13 @@ time = "0.3.44"
 waterui-core.workspace = true
 waterui-layout.workspace = true
 nami.workspace = true
-waterui-controls.workspace = true
 waterui-text.workspace = true
-waterui-color.workspace = true
-zeroize = { version = "1.8.2", default-features = false }
-bcrypt = "0.17.1"
-serde = { workspace = true, features = ["derive"], optional = true }
+
 
 [features]
 default = []
-serde = ["dep:serde", "waterui-core/serde"]
 
 [dev-dependencies]
-serde_json = "1.0"
 waterui.workspace = true
 
 [lints]
