--- a/components/navigation/Cargo.toml
+++ b/components/navigation/Cargo.toml
@@ -15,6 +15,8 @@ categories = ["gui"]
 waterui-core.workspace = true
 waterui-text.workspace = true
 waterui-color.workspace = true
+waterui-controls.workspace = true
+
 nami.workspace = true
 
 
