Refactor FFI bindings and hot reload functionality
- Introduced opaque types for WuiWatcherMetadata and WuiWatcherGuard.
- Simplified FFI bindings for computed and reactive types using macros.
- Removed redundant binding implementations and replaced them with macro-generated bindings.
- Updated the hot reload mechanism to connect to a TCP server for dynamic updates.
- Enhanced error handling for loading dynamic libraries and symbols.
- Cleaned up unused code and improved organization in hot_reload.rs.
- Updated waterui.h to reflect changes in the FFI structure and added new event types.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,6 +99,8 @@ serde = { workspace = true, features = ["derive"], optional = true }
 log.workspace = true
 pulldown-cmark = "0.13"
 waterui-derive.workspace = true
+async-channel = "1.9"
+libloading = "0.8"
 
 [features]
 default = []
