--- a/ffi/Cargo.toml
+++ b/ffi/Cargo.toml
@@ -26,6 +26,7 @@ executor-core.workspace = true
 cbindgen = { version = "0.29.0", optional = true }
 waterui-graphics.workspace = true
 wgpu.workspace = true
+paste = "1.0.15"
 
 [[bin]]
 name = "generate_header"
