chore: Track dev branch for android submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "backends/android"]
 	path = backends/android
 	url = https://github.com/water-rs/android-backend.git
+	branch = dev
 [submodule "backends/apple"]
 	path = backends/apple
 	url = https://github.com/water-rs/apple-backend.git
