feat: Add new dependencies for enhanced functionality and refactor hot reload implementation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -101,6 +101,9 @@ pulldown-cmark = "0.13"
 waterui-derive.workspace = true
 async-channel = "1.9"
 libloading = "0.8"
+tungstenite = "0.28.0"
+thiserror = "2.0.17"
+uuid = { version = "1.18.1", features = ["v4"] }
 
 [features]
 default = []
