Refactor CLI structure and remove unused modules
- Deleted the `config.rs`, `doctor.rs`, `package.rs`, `platform.rs`, and related modules to streamline the codebase.
- Consolidated command handling in `main.rs` to improve clarity and maintainability.
- Introduced a new `util.rs` file to centralize utility functions, including directory management and hot reload configuration.
- Updated command argument parsing to enhance user experience and reduce complexity.
- Improved error handling and output formatting across the CLI commands.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -41,6 +41,10 @@ tokio-tungstenite = "0.23"
 thiserror = "2.0.17"
 smol = "2.0.2"
 
+[[bin]]
+name = "water"
+path = "src/terminal/main.rs"
+
 
 [target.'cfg(target_os = "macos")'.dependencies]
 which = "8.0.0"
