feat: add miette integration for enhanced error handling and logging

--- a/ffi/Cargo.toml
+++ b/ffi/Cargo.toml
@@ -36,3 +36,6 @@ required-features = ["cbindgen"]
 
 [features]
 default = []
+
+[target.'cfg(not(target_os="android"))'.dependencies]
+miette = { version = "7", features = ["fancy"] }
