--- a/backends/tui/Cargo.toml
+++ b/backends/tui/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["gui"]
 
 [dependencies]
 waterui-core.workspace = true
-waterui-render-utils.workspace = true
+hydrolysis.workspace = true
 log.workspace = true
 waterui.workspace = true
 waterui-text.workspace = true
