--- a/ffi/Cargo.toml
+++ b/ffi/Cargo.toml
@@ -21,7 +21,7 @@ waterui-media.workspace = true
 waterui-color.workspace = true
 waterui-layout.workspace = true
 nami.workspace = true
-native-executor = { version = "0.6.0" }
+native-executor = { git = "https://github.com/water-rs/native_executor", branch = "dev" }
 executor-core.workspace = true
 cbindgen = { version = "0.29.0", optional = true }
 waterui-graphics.workspace = true
