--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,7 +58,7 @@ executor-core = { git = "https://github.com/lexoliu/executor-core", features = [
 futures = "0.3"
 nami = { version = "0.9.0" }
 nami-core = { version = "0.3.0" }
-log = "0.4.28"
+tracing = "0.1.41"
 waterui-core = { version = "0.1.0", path = "core" }
 waterui-str = { version = "0.2.0", path = "utils/str" }
 waterui-url = { version = "0.1.0", path = "utils/url" }
@@ -100,7 +100,7 @@ waterui-controls.workspace = true
 executor-core.workspace = true
 futures.workspace = true
 serde = { workspace = true, features = ["derive"], optional = true }
-log.workspace = true
+tracing.workspace = true
 pulldown-cmark = "0.13"
 waterui-derive.workspace = true
 async-channel = "1.9"
