--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -23,7 +23,7 @@ notify = { version = "8.2.0", default-features = false, features = ["macos_kqueu
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 toml = "0.9.8"
-tracing = "0.1.41"
+tracing.workspace = true
 tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
 walkdir = "2.5.0"
 which = "8.0.0"
