--- a/ffi/Cargo.toml
+++ b/ffi/Cargo.toml
@@ -27,6 +27,8 @@ cbindgen = { version = "0.29.0", optional = true }
 waterui-graphics.workspace = true
 wgpu.workspace = true
 paste = "1.0.15"
+tracing.workspace = true
+tracing-panic.workspace = true
 
 
 [[bin]]
@@ -35,7 +37,5 @@ path = "generate_header.rs"
 required-features = ["cbindgen"]
 
 [features]
-default = []
-
-[target.'cfg(not(target_os="android"))'.dependencies]
-miette = { version = "7", features = ["fancy"] }
+default = ["std"]
+std = []
