--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,156 +1,26 @@
 name: Release
 
 on:
-  push:
-    tags:
-      - "*-v-*"
+  workflow_run:
+    workflows: ["CI"]
+    branches: [main]
+    types: [completed]
 
 permissions:
   contents: write
-  packages: write
-
-env:
-  CARGO_TERM_COLOR: always
+  pull-requests: write
 
 jobs:
-  determine-product:
-    name: Determine product
+  release-plz:
+    name: Release
     runs-on: ubuntu-latest
-    outputs:
-      product: ${{ steps.parse.outputs.product }}
-      version: ${{ steps.parse.outputs.version }}
-      product-type: ${{ steps.parse.outputs.product_type }}
-    steps:
-      - name: Extract product information
-        id: parse
-        shell: python
-        env:
-          TAG: ${{ github.ref_name }}
-        run: |
-          import os
-
-          tag = os.environ["TAG"]
-          if "-v-" not in tag:
-              raise SystemExit(f"Tag '{tag}' does not follow the <product>-v-<version> convention.")
-
-          product, version = tag.rsplit("-v-", 1)
-          if not product or not version:
-              raise SystemExit(f"Unable to extract product/version from tag '{tag}'.")
-
-          product_type = "unknown"
-          if product == "waterui-cli":
-              product_type = "cli"
-          elif product.startswith("waterui"):
-              product_type = "rust"
-          else:
-              raise SystemExit(f"Unsupported product '{product}' in release tag '{tag}'.")
-
-          print(f"Detected {product_type} product '{product}' for version '{version}'")
-
-          output_path = os.environ["GITHUB_OUTPUT"]
-          with open(output_path, "a", encoding="utf-8") as fh:
-              fh.write(f"product={product}\n")
-              fh.write(f"version={version}\n")
-              fh.write(f"product_type={product_type}\n")
-
-  release-rust:
-    name: Release Rust crate
-    needs: determine-product
-    if: needs.determine-product.outputs.product-type == 'rust'
-    runs-on: ubuntu-latest
+    if: github.event.workflow_run.conclusion == 'success'
     steps:
       - uses: actions/checkout@v4
         with:
-          submodules: "recursive"
-
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt, clippy
-
-      - name: Cache cargo registry
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Cache cargo index
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/git
-          key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Check formatting
-        run: cargo fmt --all -- --check
-
-      - name: Run clippy
-        run: cargo clippy --all-targets --workspace -- -D warnings
-
-      - name: Run tests
-        run: cargo test --workspace
-
-      - name: Build documentation
-        run: cargo doc --no-deps --workspace
-
-      - name: Publish to crates.io
+          fetch-depth: 0
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: MarcoIeni/release-plz-action@v0.5
         env:
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CRATES_IO_TOKEN }}
-        run: cargo publish -p ${{ needs.determine-product.outputs.product }}
-
-      - name: Publish GitHub release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ github.ref_name }}
-          name: "${{ needs.determine-product.outputs.product }} v${{ needs.determine-product.outputs.version }}"
-          generate_release_notes: true
-
-  release-cli:
-    name: Release CLI
-    needs: determine-product
-    if: needs.determine-product.outputs.product-type == 'cli'
-    runs-on: ubuntu-latest
-    env:
-      PRODUCT: ${{ needs.determine-product.outputs.product }}
-      VERSION: ${{ needs.determine-product.outputs.version }}
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: "recursive"
-
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt, clippy
-
-      - name: Cache cargo registry
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Cache cargo index
-        uses: actions/cache@v4
-        with:
-          path: ~/.cargo/git
-          key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Check formatting
-        run: cargo fmt --all -- --check
-
-      - name: Run clippy
-        run: cargo clippy --all-targets --workspace -- -D warnings
-
-      - name: Run tests
-        run: cargo test --workspace
-
-      - name: Publish CLI to crates.io
-        env:
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CRATES_IO_TOKEN }}
-        run: cargo publish -p ${PRODUCT}
-
-      - name: Publish GitHub release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ github.ref_name }}
-          name: "${{ env.PRODUCT }} v${{ env.VERSION }}"
-          generate_release_notes: true
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
