--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,7 +54,7 @@ clippy.multiple_crate_versions =  { level = "allow", priority = 1 }
 
 
 [workspace.dependencies]
-executor-core = { git = "https://github.com/lexoliu/executor-core", features = ["std"], branch = "dev"}
+executor-core = { version = "0.7.0", features = ["std"]}
 futures = "0.3"
 nami = { version = "0.9.0" }
 nami-core = { version = "0.3.0" }
