--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -32,11 +32,6 @@ semver = "1.0.27"
 webbrowser = "1.0.5"
 color-eyre = { version = "0.6.5", features = ["issue-url"] }
 tokio = { version = "1", features = ["full"] }
-hyper = { version = "1.8.1", features = ["http1", "server"] }
-hyper-util = { version = "0.1.18", features = ["http1", "server", "tokio"] }
-http-body-util = "0.1.3"
-mime_guess = "2.0.5"
-bytes = "1.9.0"
 futures-util = "0.3.31"
 indexmap = "2.6.0"
 tungstenite = "0.23"
@@ -46,6 +41,7 @@ smol = "2.0.2"
 atty = "0.2.14"
 pathdiff = "0.2.1"
 zenwave.workspace = true
+skyzen = { path = "/Users/lexoliu/.cargo/git/checkouts/skyzen-eb59f14612d62f47/0b60c4e", default-features = true, features = ["websocket", "rt"] }
 
 [[bin]]
 name = "water"
