refactor: update submodule branches and clean up unused files
- Changed the branch for the Android and Apple backend submodules to the default branch.
- Updated the Android backend submodule to a new commit.
- Added a new Apple backend submodule with its initial commit.
- Removed the `waterui.h` header file from the Apple backend, which was previously included but is no longer needed.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "backends/android"]
 	path = backends/android
 	url = https://github.com/water-rs/android-backend.git
-	branch = dev
+	branch = .
 [submodule "backends/apple"]
 	path = backends/apple
 	url = https://github.com/water-rs/apple-backend.git
-	branch = dev
+	branch = .
