--- a/components/layout/Cargo.toml
+++ b/components/layout/Cargo.toml
@@ -14,6 +14,7 @@ categories = ["gui"]
 [dependencies]
 waterui-core.workspace = true
 nami.workspace = true
+bitflags = "2.6"
 
 [dependencies.serde]
 version = "1.0"
