feat: Introduce comprehensive logging and panic reporting plan
- Added `PLAN_LOGGING.md` to outline the current state, problems, proposed architecture, and implementation plan for logging and panic reporting in WaterUI.
- Updated FFI to conditionally initialize tracing subscribers based on hot reload status.
- Enhanced hot reload functionality to ensure proper logging in both hot reload and non-hot reload modes.
- Introduced new CLI flags for log echo control and panic report parsing, improving user experience and debugging capabilities.
- Refactored related files to support the new logging architecture and ensure structured panic reporting.

--- a/ffi/Cargo.toml
+++ b/ffi/Cargo.toml
@@ -29,6 +29,7 @@ wgpu.workspace = true
 paste = "1.0.15"
 tracing.workspace = true
 tracing-panic.workspace = true
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 
 [[bin]]
