feat: Enhance video component functionality and interrupt handling
- Updated the video components to introduce a new `Video` type for raw video views without controls, and a `VideoPlayer` type for full-featured playback with native controls.
- Improved interrupt handling in the Android and Apple device implementations to allow graceful exits during long-running operations.
- Refactored the video player example to utilize the new `Video` and `VideoPlayer` components directly, enhancing the user experience.
- Updated FFI representations for video events and components to align with the new structure, ensuring better integration with external systems.
- Enhanced documentation for video components and their usage in examples, providing clearer guidance for developers.

--- a/utils/url/Cargo.toml
+++ b/utils/url/Cargo.toml
@@ -13,7 +13,7 @@ categories.workspace = true
 
 [dependencies]
 waterui-str.workspace = true
-nami.workspace = true
+nami-core.workspace = true
 
 [features]
 std = []
