refactor: Update hot reload configuration and enhance dependencies
- Changed the hot reload configuration flag from `waterui_enable_hot_reload` to `waterui_hot_reload_lib` in `build.rs` and related documentation.
- Added `native-executor` dependency from the dev branch in `Cargo.toml` for improved execution capabilities.
- Updated the `zenwave` dependency to track the dev branch for ongoing enhancements.
- Introduced a new `run_session` module to manage run session persistence, allowing users to quickly re-run previous commands.
- Implemented a `hot_reload` module to handle hot reload server and file watcher infrastructure, improving the development workflow.
- Enhanced logging and filtering for Apple device logs to reduce clutter during development.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,6 +77,7 @@ waterui-web = { version = "0.1.0", path = "backends/web" }
 waterui-tui = { version = "0.1.0", path = "backends/tui" }
 hydrolysis = { version = "0.1.0", path = "backends/hydrolysis" }
 waterui = { version = "0.1.0", path = "." }
+native-executor = { git = "https://github.com/water-rs/native_executor", branch = "dev" }
 waterui-derive = { version = "0.1.0", path = "derive" }
 waterkit-location = { version = "0.1.0", path = "kit/location" }
 serde = { version = "1.0", default-features = false, features = ["alloc"] }
@@ -84,7 +85,7 @@ wgpu = "27.0"
 time = "0.3"
 tiny-skia = "0.11"
 vello = "0.2"
-zenwave = { git = "https://github.com/zen-rs/zenwave" }
+zenwave = { git = "https://github.com/zen-rs/zenwave", branch = "dev" }
 tracing-panic = "0.1.2"
 
 [dependencies]
@@ -94,6 +95,7 @@ waterui-str.workspace = true
 waterui-layout.workspace = true
 waterui-text.workspace = true
 waterui-media.workspace = true
+native-executor.workspace = true
 waterui-navigation.workspace = true
 waterui-color.workspace = true
 waterui-form.workspace = true
