--- a/ffi/Cargo.toml
+++ b/ffi/Cargo.toml
@@ -18,10 +18,10 @@ waterui-text.workspace = true
 waterui-form.workspace = true
 waterui-navigation.workspace = true
 waterui-media.workspace = true
+native-executor.workspace = true
 waterui-color.workspace = true
 waterui-layout.workspace = true
 nami.workspace = true
-native-executor = { git = "https://github.com/water-rs/native_executor", branch = "dev" }
 executor-core.workspace = true
 cbindgen = { version = "0.29.0", optional = true }
 waterui-graphics.workspace = true
