feat: Introduce GpuSurface for high-performance GPU rendering
- Added a new `GpuSurface` module to provide a raw view for high-performance GPU rendering using wgpu, enabling custom rendering at high frame rates.
- Implemented `GpuContext` and `GpuFrame` structures to manage GPU resources and frame data during rendering.
- Created an FFI interface for `GpuSurface`, allowing integration with native platforms and enabling seamless rendering capabilities.
- Updated `Cargo.toml` to include the latest `wgpu` version and added new dependencies for improved functionality.

--- a/ffi/Cargo.toml
+++ b/ffi/Cargo.toml
@@ -24,12 +24,14 @@ waterui-layout.workspace = true
 nami.workspace = true
 executor-core.workspace = true
 cbindgen = { version = "0.29.0", optional = true }
-waterui-graphics.workspace = true
+waterui-graphics = { workspace = true, features = ["wgpu"] }
 wgpu.workspace = true
 paste = "1.0.15"
 tracing.workspace = true
 tracing-panic.workspace = true
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+pollster = "0.4"
+raw-window-handle = "0.6"
 
 
 [[bin]]
