chore: Update FFI header generation and enhance tab positioning documentation
- Modified the FFI C header generation command to clarify that manual edits are not required.
- Updated `cbindgen.toml` to include `waterui-graphics` in the list of parsed crates for FFI generation.
- Added new `WuiTabPosition` enum and enhanced documentation for tab positioning within the tab container.
- Improved comments in `waterui.h` to provide clearer guidance on the usage and safety of FFI functions.

--- a/ffi/cbindgen.toml
+++ b/ffi/cbindgen.toml
@@ -51,9 +51,9 @@ non_null_attribute = "_Nonnull"
 
 [parse]
 parse_deps = true
-include = ["waterui","waterui-ffi","waterui-str","waterui-media","waterui-text","waterui-text","waterui-core","waterui-layout","nami"]
+include = ["waterui","waterui-ffi","waterui-str","waterui-media","waterui-text","waterui-text","waterui-core","waterui-layout","waterui-graphics","nami"]
 
 
 [parse.expand]
-crates = ["waterui","waterui-ffi","waterui-str","waterui-media","waterui-text","waterui-text","waterui-core","waterui-layout","nami"]
+crates = ["waterui","waterui-ffi","waterui-str","waterui-media","waterui-text","waterui-text","waterui-core","waterui-layout","waterui-graphics"]
 
