--- a/components/graphics/Cargo.toml
+++ b/components/graphics/Cargo.toml
@@ -11,15 +11,16 @@ keywords = ["graphics", "2d", "ui", "waterui"]
 categories = ["gui"]
 
 [features]
-default = []
-wgpu = ["dep:wgpu"]
+default = ["canvas"]
+wgpu = ["dep:wgpu", "dep:bytemuck"]
+canvas = ["wgpu", "dep:vello"]
 
 [dependencies]
 waterui-core.workspace = true
 waterui-color.workspace = true
-kurbo = "0.12.0"
-tiny-skia = "0.11.4"
 wgpu = { workspace = true, optional = true }
+bytemuck = { version = "1.14", optional = true }
+vello = { workspace = true, optional = true }
 
 [lints]
 workspace = true
