chore: Update workspace configuration and dependencies for examples
- Added examples directory to the workspace in `Cargo.toml`.
- Updated dependencies in example projects to use workspace references for `waterui` and `waterui-ffi`.
- Removed direct path dependencies for cleaner project structure.
- Updated `Cargo.lock` to reflect changes in dependency versions.

--- a/examples/canvas/Cargo.toml
+++ b/examples/canvas/Cargo.toml
@@ -8,7 +8,5 @@ authors = ["Lexo Liu"]
 crate-type = ["lib", "staticlib", "cdylib"]
 
 [dependencies]
-waterui = { path = "../..", features = ["graphics"] }
-waterui-ffi = { path = "../../ffi" }
-
-[workspace]
+waterui = { workspace = true, features = ["graphics"] }
+waterui-ffi.workspace = true
