--- a/examples/form/Cargo.toml
+++ b/examples/form/Cargo.toml
@@ -8,7 +8,5 @@ authors = ["Lexo Liu"]
 crate-type = ["lib", "staticlib", "cdylib"]
 
 [dependencies]
-waterui = { path = "../.." }
-waterui-ffi = { path = "../../ffi" }
-
-[workspace]
+waterui.workspace = true
+waterui-ffi.workspace = true
