Refactor layout components and improve documentation
- Updated `HStack` and `VStack` implementations to use `const fn` for stretch axis checks.
- Changed `MediaFilter` enum to use `Self` for type consistency.
- Removed unused imports in `photo.rs` and improved clarity in `video.rs` by using `const fn` for aspect ratio and loop settings.
- Added `#[must_use]` annotations to methods in `StyledStr` and `Url` for better API usability.
- Enhanced documentation throughout the layout and environment modules to clarify usage and improve readability.
- Fixed minor formatting issues and improved comments for better understanding.
- Added new `Material` variant for background shaders.
- Updated connection handling in the debug module to improve error handling and clarity.
- Documented FFI component coverage gaps for better tracking of missing components in Apple and Android backends.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -111,6 +111,7 @@ tracing-panic = "0.1.2"
 pulldown-cmark = "0.13"
 waterui-derive.workspace = true
 async-channel = "1.9"
+pin-project-lite = "0.2"
 libloading = "0.8"
 thiserror = "2.0.17"
 uuid = { version = "1.18.1", features = ["v4"] }
