Refactor CLI toolchain and installation modules
- Removed the async runtime module as it is no longer needed.
- Updated the CreateArgs struct to remove the team_id field.
- Simplified the main command versioning logic.
- Refined ToolchainError handling by using the thiserror crate for better error management.
- Streamlined the Installation trait and its implementations for better clarity and performance.
- Introduced a new Brew installation module for package management.
- Consolidated utility functions into a new utils module, separating build and task functionalities.
- Removed deprecated signal handling methods in favor of structured cancellation.
- Enhanced Rust toolchain installation logic for improved error handling and reporting.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -34,8 +34,6 @@ crates-index = "3.11.0"
 semver = "1.0.27"
 webbrowser = "1.0.5"
 color-eyre = { version = "0.6.5", features = ["issue-url"] }
-tokio = { version = "1", features = ["full"] }
-tokio-util = { version = "0.7", features = ["rt"] }
 futures-util = "0.3.31"
 indexmap = "2.6.0"
 tungstenite = "0.23"
@@ -46,6 +44,7 @@ pathdiff = "0.2.1"
 image = { version = "0.25", default-features = false, features = ["png"] }
 zenwave.workspace = true
 skyzen = { git = "https://github.com/zen-rs/skyzen" , branch = "dev", default-features = true, features = ["websocket", "rt"] }
+target-lexicon = "0.13.3"
 
 [[bin]]
 name = "water"
