--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -15,6 +15,7 @@ categories.workspace = true
 cargo_metadata = "0.23.1"
 cargo_toml = "0.22.3"
 color-eyre = "0.6.5"
+pin-project-lite = "0.2.16"
 serde.workspace = true
 serde_json = "1.0.145"
 smol = "2.0.2"
@@ -22,6 +23,7 @@ target-lexicon = "0.13.3"
 thiserror = "2.0.17"
 time = { workspace = true, features = ["serde"] }
 toml = "0.9.8"
+tracing.workspace = true
 which = "8.0.0"
 
 [lints]
