--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -16,6 +16,7 @@ cargo_metadata = "0.23.1"
 cargo_toml = "0.22.3"
 color-eyre = "0.6.5"
 pin-project-lite = "0.2.16"
+reflink = "0.1.3"
 serde.workspace = true
 serde_json = "1.0.145"
 smol = "2.0.2"
