--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,6 +88,8 @@ time = "0.3"
 tiny-skia = "0.11"
 vello = { git = "https://github.com/linebender/vello", branch = "main" }
 zenwave = { git = "https://github.com/zen-rs/zenwave", branch = "dev" }
+skyzen = { git = "https://github.com/zen-rs/skyzen" , branch = "dev" }
+
 tracing-panic = "0.1.2"
 
 [dependencies]
@@ -119,6 +121,7 @@ uuid = { version = "1.18.1", features = ["v4"] }
 serde_json = "1.0"
 zenwave.workspace = true
 waterui-graphics = { workspace = true, optional = true }
+async-fs = "2.2.0"
 
 [features]
 default = []
