--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -15,10 +15,12 @@ categories.workspace = true
 cargo_metadata = "0.23.1"
 cargo_toml = "0.22.3"
 color-eyre = "0.6.5"
+include_dir = "0.7.4"
+skyzen = { workspace = true, features = ["ws"] }
 pin-project-lite = "0.2.16"
 reflink = "0.1.3"
 serde.workspace = true
-serde_json = "1.0.145"
+serde_json = "1.0"
 smol = "2.0.2"
 target-lexicon = "0.13.3"
 thiserror = "2.0.17"
