--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -16,7 +16,8 @@ cargo_metadata = "0.23.1"
 cargo_toml = "0.22.3"
 color-eyre = "0.6.5"
 include_dir = "0.7.4"
-skyzen = { workspace = true, features = ["ws"] }
+async-tungstenite = { version = "0.28", default-features = false, features = ["handshake"] }
+futures.workspace = true
 pin-project-lite = "0.2.16"
 reflink = "0.1.3"
 serde.workspace = true
