--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -16,7 +16,7 @@ cargo_metadata = "0.23.1"
 cargo_toml = "0.22.3"
 color-eyre = "0.6.5"
 include_dir = "0.7.4"
-async-tungstenite = { version = "0.28", default-features = false, features = ["handshake"] }
+skyzen = { workspace = true, default-features = false, features = ["json", "ws", "hyper"] }
 futures.workspace = true
 pin-project-lite = "0.2.16"
 reflink = "0.1.3"
