Enhance documentation and improve code clarity across multiple modules
- Added module-level documentation comments for `brew`, `build`, `debug`, `device`, `lib`, `platform`, `project`, `toolchain`, and various components in the `controls`, `form`, `graphics`, `layout`, and `media` modules.
- Improved error handling and added error descriptions in `device` and `project` modules.
- Refactored code for better readability, including simplifying match statements and using more descriptive variable names.
- Updated examples' `Cargo.toml` files with descriptions, keywords, and categories for better discoverability.
- Enhanced the `CliConnection` and related structs with `Debug` implementations for easier debugging.
- Improved handling of WebSocket messages in the `CliReceiver` struct to ignore unnecessary messages.
- Added missing documentation for various functions and structs to ensure clarity on usage and behavior.

--- a/examples/flame/Cargo.toml
+++ b/examples/flame/Cargo.toml
@@ -3,6 +3,12 @@ name = "flame-example"
 version = "0.1.0"
 edition = "2024"
 authors = ["Lexo Liu"]
+description = "Flame example for WaterUI framework"
+license.workspace = true
+repository.workspace = true
+readme = "../../README.md"
+keywords = ["ui", "framework", "example", "flame"]
+categories = ["gui"]
 
 [lib]
 crate-type = ["lib", "staticlib", "cdylib"]
