--- a/examples/markdown/Cargo.toml
+++ b/examples/markdown/Cargo.toml
@@ -3,6 +3,12 @@ name = "markdown-example"
 version = "0.1.0"
 edition = "2024"
 authors = ["Lexo Liu"]
+description = "Markdown example for WaterUI framework"
+license.workspace = true
+repository.workspace = true
+readme = "../../README.md"
+keywords = ["ui", "framework", "example", "markdown"]
+categories = ["gui"]
 
 [lib]
 crate-type = ["lib", "staticlib", "cdylib"]
