--- a/examples/video-player/Cargo.toml
+++ b/examples/video-player/Cargo.toml
@@ -3,6 +3,12 @@ name = "video-player-example"
 version = "0.1.0"
 edition = "2024"
 authors = ["Lexo Liu"]
+description = "Video player example for WaterUI framework"
+license.workspace = true
+repository.workspace = true
+readme = "../../README.md"
+keywords = ["ui", "framework", "example", "video"]
+categories = ["gui"]
 
 [lib]
 crate-type = ["lib", "staticlib", "cdylib"]
